--- a/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/Base.lproj/Main.storyboard
@@ -255,7 +255,7 @@
                                     <constraint firstAttribute="height" constant="70" id="m22-4B-6K2"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bTj-rN-h8P">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="bTj-rN-h8P">
                                 <rect key="frame" x="16" y="90" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="EWC-Vv-fbn"/>
