--- a/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/Base.lproj/Main.storyboard
@@ -194,7 +194,7 @@
                                             <constraint firstAttribute="height" constant="100" id="kUI-k1-t9F"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user@breakpoint.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bep-DS-2Yw">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user@breakpoint.com" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="bep-DS-2Yw">
                                         <rect key="frame" x="65" y="150" width="245" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="wEe-Pf-xe7"/>
